--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,27 @@
 ---
+import Layout from "~/components/Layout.astro";
+import { Counter } from "~/components/Counter";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout>
+	<Counter client:visible />
+	<span class="text">
+		This counter is written using <a class="text__url" href="https://www.solidjs.com/">Solid.JS</a>
+	</span>
+</Layout>
+
+<style lang="scss">
+	@use "../styles/variables.scss";
+	.text {
+		display: block;
+		font-family: variables.$font-heading;
+		text-align: center;
+		font-size: 2rem;
+		margin-top: 1rem;
+
+		&__url {
+			color: variables.$orange;
+			font-weight: 600;
+		}
+	}
+</style>
