--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,19 @@
 @use "./variables.scss";
 @import "./preflight.scss";
+@import url("https://fonts.googleapis.com/css2?family=Unbounded&display=swap");
 
 body {
-	background-color: #fffff4;
+	background-color: #f4f4ff;
+}
+
+*::-webkit-scrollbar {
+	width: 0.5rem;
+	background-color: transparent;
+	border-radius: 1rem;
+}
+
+*::-webkit-scrollbar-thumb {
+	width: 0.5rem;
+	background-color: rgba($color: variables.$black, $alpha: 0.5);
+	border-radius: 1rem;
 }
