--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -2,7 +2,7 @@
 import "~/styles/global.scss";
 import "@fontsource/space-grotesk/500.css";
 import "@fontsource/space-grotesk/600.css";
-import Navbar from "./Navbar.astro";
+import Sidebar from "./Sidebar.astro";
 ---
 
 <html lang="en">
@@ -14,7 +14,27 @@ import Navbar from "./Navbar.astro";
 		<title>Astro</title>
 	</head>
 	<body>
-		<Navbar />
-		<slot />
+		<div class="container">
+			<Sidebar />
+			<div class="main-content">
+				<slot />
+			</div>
+		</div>
 	</body>
 </html>
+
+<style lang="scss">
+	.container {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		padding: 2rem;
+		display: grid;
+		gap: 2rem;
+		grid-template-columns: 40rem 1fr;
+	}
+
+	.main-content {
+		height: 60%;
+	}
+</style>
