--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,9 @@
 $background: #f1ebeb;
-$black: #3c3839;
-$orange: #ef7d87;
+$black: #3a383c;
+$pink: #ef7dcd;
 $yellow: #f9e3a9;
 $white: #ffffff;
+$teal: #49bfb7;
 
 $font-heading: "Space Grotesk", sans-serif;
 $font-body: sans-serif;
