--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $pink: #ef7dcd;
 $yellow: #f9e3a9;
 $white: #ffffff;
 $teal: #49bfb7;
+$blue: #5985e4;
 
-$font-heading: "Space Grotesk", sans-serif;
+$font-heading: "Unbounded", sans-serif;
 $font-body: sans-serif;
