--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,3 +17,7 @@ body {
 	background-color: rgba($color: variables.$black, $alpha: 0.5);
 	border-radius: 1rem;
 }
+
+.url {
+	color: variables.$blue;
+}
