--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,7 +5,7 @@ $yellow: #f9e3a9;
 $white: #ffffff;
 $offwhite: #dbdae6;
 $teal: #49bfb7;
-$blue: #5985e4;
+$blue: #5e8ae8;
 
 $font-heading: "Unbounded", sans-serif;
-$font-body: sans-serif;
+$font-body: "Space Grotesk", sans-serif;
