--- a/src/components/chat-card/ChatCard.scss
+++ b/src/components/chat-card/ChatCard.scss
@@ -1,21 +1,22 @@
 @use "../../styles/variables.scss";
+@use "../../styles/mixins.scss";
 
 .chat-card {
 	display: grid;
 	border: 0.2rem variables.$black solid;
 	border-radius: 2rem;
-	padding: 2rem 1rem;
 	display: grid;
 	grid-template-columns: 1.5rem 6rem 1fr;
-	grid-template-rows: 2.5rem 4rem;
+	grid-template-rows: auto auto 2rem;
 	column-gap: 1rem;
+	padding-top: 2rem;
 	box-shadow: 0.4rem 0.4rem 0 0 variables.$pink, 0.4rem 0.4rem 0 0.2rem variables.$black;
 	cursor: pointer;
 }
 
 .profile-image {
 	grid-column: 2/3;
-	grid-row: 1/3;
+	grid-row: 1/-1;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -46,7 +47,7 @@
 			content: "";
 			position: absolute;
 			background-color: variables.$white;
-			width: 3rem;
+			width: 4rem;
 			height: 0.5rem;
 			border: 0.2rem variables.$black solid;
 			border-radius: 1rem;
@@ -63,12 +64,36 @@
 	font-family: variables.$font-heading;
 	font-weight: 600;
 	color: variables.$black;
+	margin-bottom: 1rem;
 }
 
-.topic {
+.summary {
 	color: rgba($color: variables.$black, $alpha: 0.8);
-	font-family: variables.$font-heading;
+	font-family: variables.$font-body;
 	font-weight: 400;
-	font-size: 1.25rem;
+	font-size: 1.5rem;
 	line-height: 1.75em;
+	padding-right: 2rem;
+}
+
+.tags {
+	grid-column: 1/-1;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	height: 100%;
+	width: fit-content;
+	margin-left: auto;
+	border-radius: 2rem 0 0 0;
+	box-shadow: 0 -0.2rem 0 0 variables.$black;
+
+	&-item {
+		color: variables.$black;
+		font-family: variables.$font-heading;
+		font-size: 1.25rem;
+		font-weight: bold;
+		padding: 0.5rem 1rem;
+		border-left: 0.2rem variables.$black solid;
+		border-radius: 2rem 0 0 0;
+	}
 }
