--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -43,7 +43,7 @@
 		background-color: variables.$blue;
 		padding: 1rem;
 		border-radius: 99rem;
-		color: variables.$white;
+		color: variables.$black;
 		border: 0.2rem variables.$black solid;
 	}
 }
