--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,7 +1,43 @@
 ---
+import { readdir, readFile } from "node:fs/promises";
+import { resolve } from "node:path";
+import { fileURLToPath } from "node:url";
 import "~/styles/global.scss";
 import "@fontsource/space-grotesk/500.css";
 import "@fontsource/space-grotesk/600.css";
+import { Metadata, metadataSchema } from "~/service/Metadata";
+import { Sidebar } from "./sidebar";
+
+const files = await readdir(resolve(fileURLToPath(import.meta.url), "../../../chats"), { withFileTypes: true });
+const readFileInstructions: Promise<string>[] = [];
+for await (const file of files) {
+	// Only read the directories, because we are on the first level
+	// Ignore non-directory
+	if (file.isDirectory()) {
+		if (file.name === "photos" || file.name === "stickers" || file.name === "videos") {
+			// We don't need to traverse these
+			continue;
+		}
+
+		const levelTwoFiles = await readdir(resolve(fileURLToPath(import.meta.url), "../../../chats/", file.name), {
+			withFileTypes: true,
+		});
+		for (const levelTwoFile of levelTwoFiles) {
+			// We would like to search for metadata.json only
+			if (levelTwoFile.name === "metadata.json") {
+				readFileInstructions.push(
+					readFile(resolve(fileURLToPath(import.meta.url), "../../../chats/", file.name, levelTwoFile.name), {
+						encoding: "utf-8",
+					})
+				);
+			}
+		}
+	}
+}
+
+const talks: Metadata[] = await Promise.all(
+	readFileInstructions.map(async (file) => metadataSchema.parse(JSON.parse(await file)))
+);
 ---
 
 <html lang="en">
@@ -11,8 +47,37 @@ import "@fontsource/space-grotesk/600.css";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
+		<script>
+			import "../scripts/spa-navigation";
+		</script>
 	</head>
 	<body>
-		<slot />
+		<div class="container">
+			<Sidebar talks={[...talks, ...talks]} />
+			<div class="chat-content">
+				<slot />
+			</div>
+		</div>
 	</body>
 </html>
+
+<style lang="scss">
+	@use "../styles/variables.scss";
+
+	.container {
+		position: relative;
+		max-width: 1400px;
+		height: 100%;
+		margin: 0 auto;
+		padding: 2rem;
+		display: grid;
+		gap: 2rem;
+		grid-template-columns: 42rem 1fr;
+	}
+
+	.chat-content {
+		position: relative;
+		height: 100%;
+		max-height: inherit;
+	}
+</style>
