--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,15 @@
 $background: #f1ebeb;
 $black: #3a383c;
-$pink: #ef7dcd;
+$pink: #fca2e1;
 $yellow: #f9e3a9;
 $white: #ffffff;
 $offwhite: #dbdae6;
-$teal: #49bfb7;
-$blue: #5e8ae8;
+$teal: #6be4dc;
+$blue: #93b5ff;
 
 $font-heading: "Unbounded", sans-serif;
 $font-body: "Space Grotesk", sans-serif;
+$font-mono: "Jetbrains Mono", monospace;
+
+$code-fg: #242a61;
+$code-bg: #c2c7ea;
