--- a/src/components/chat-box/ChatBox.scss
+++ b/src/components/chat-box/ChatBox.scss
@@ -77,11 +77,12 @@
 		position: relative;
 		display: flex;
 		flex-direction: column;
+		overflow-x: hidden;
 		overflow-y: scroll;
 		gap: 4rem;
 		height: 100%;
 		width: 100%;
 		padding: 2rem;
-		padding-top: 4rem;
+		padding-top: 6rem;
 	}
 }
