--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,10 +6,11 @@ $white: #ffffff;
 $offwhite: #dbdae6;
 $teal: #6be4dc;
 $blue: #93b5ff;
+$deep-blue: #4a6cb6;
 
 $font-heading: "Unbounded", sans-serif;
 $font-body: "Space Grotesk", sans-serif;
 $font-mono: "Jetbrains Mono", monospace;
 
-$code-fg: #242a61;
-$code-bg: #c2c7ea;
+$code-fg: #1e2779;
+$code-bg: #d7daef;
