--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -13,7 +13,9 @@ import "@fontsource/unbounded/400.css";
 import "@fontsource/unbounded/600.css";
 import "@fontsource/jetbrains-mono/600.css";
 
-const files = await readdir(resolve(fileURLToPath(import.meta.url), "../../../chats"), { withFileTypes: true });
+const CHATS_PATH = "../../chats";
+
+const files = await readdir(resolve(fileURLToPath(import.meta.url), CHATS_PATH), { withFileTypes: true });
 const readFileInstructions: Promise<string>[] = [];
 for await (const file of files) {
 	// Only read the directories, because we are on the first level
@@ -24,14 +26,14 @@ for await (const file of files) {
 			continue;
 		}
 
-		const levelTwoFiles = await readdir(resolve(fileURLToPath(import.meta.url), "../../../chats/", file.name), {
+		const levelTwoFiles = await readdir(resolve(fileURLToPath(import.meta.url), CHATS_PATH, file.name), {
 			withFileTypes: true,
 		});
 		for (const levelTwoFile of levelTwoFiles) {
 			// We would like to search for metadata.json only
 			if (levelTwoFile.name === "metadata.json") {
 				readFileInstructions.push(
-					readFile(resolve(fileURLToPath(import.meta.url), "../../../chats/", file.name, levelTwoFile.name), {
+					readFile(resolve(fileURLToPath(import.meta.url), CHATS_PATH, file.name, levelTwoFile.name), {
 						encoding: "utf-8",
 					})
 				);
@@ -43,6 +45,8 @@ for await (const file of files) {
 const talks: Metadata[] = await Promise.all(
 	readFileInstructions.map(async (file) => metadataSchema.parse(JSON.parse(await file)))
 );
+
+const pathname = Astro.url.pathname;
 ---
 
 <html lang="en">
@@ -58,7 +62,7 @@ const talks: Metadata[] = await Promise.all(
 	</head>
 	<body>
 		<div class="container">
-			<Sidebar talks={[...talks, ...talks]} />
+			<Sidebar talks={talks} pathname={pathname} client:load />
 			<div class="chat-content" id="chat-content">
 				<slot />
 			</div>
