--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -34,6 +34,12 @@
 		font-family: variables.$font-heading;
 		padding-block: 1rem;
 		padding-inline: 2rem;
+
+		&-active {
+			display: none;
+			width: 0;
+			opacity: 0;
+		}
 	}
 
 	&-icon {
@@ -45,6 +51,12 @@
 		border-radius: 99rem;
 		color: variables.$black;
 		border: 0.2rem variables.$black solid;
+		cursor: pointer;
+		width: auto;
+
+		&-active {
+			width: 100%;
+		}
 	}
 }
 
