--- a/src/pages/fragments/chat/[slug].astro
+++ b/src/pages/fragments/chat/[slug].astro
@@ -15,4 +15,4 @@ export async function getStaticPaths() {
 }
 ---
 
-<ChatBox chat={parsedChat} />
+<ChatBox chat={parsedChat} slug={slug} client:load />
