--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import { ChatBox } from "~/components/chat-box";
 import Layout from "~/components/Layout.astro";
 ---
 
-<Layout>
-	<ChatBox />
+<Layout title="Home">
+	<ChatBox slug="_" />
 </Layout>
