--- a/src/pages/chat/[slug].astro
+++ b/src/pages/chat/[slug].astro
@@ -9,13 +9,13 @@ type Params = {
 };
 
 const { slug } = Astro.params as Params;
-const parsedChat = await findChatBySlug(slug);
+const found = await findChatBySlug(slug);
 
 export async function getStaticPaths() {
 	return getPaths();
 }
 ---
 
-<Layout>
-	<ChatBox chat={parsedChat} client:load slug={slug} />
+<Layout title={found?.metadata.title ?? "Not Found"}>
+	<ChatBox chat={found?.chat} client:load slug={slug} />
 </Layout>
