--- a/src/pages/fragments/chat/[slug].astro
+++ b/src/pages/fragments/chat/[slug].astro
@@ -8,11 +8,11 @@ type Params = {
 };
 
 const { slug } = Astro.params as Params;
-const parsedChat = await findChatBySlug(slug);
+const found = await findChatBySlug(slug);
 
 export async function getStaticPaths() {
 	return getPaths();
 }
 ---
 
-<ChatBox chat={parsedChat} slug={slug} client:load />
+<ChatBox chat={found?.chat} slug={slug} client:load />
