--- a/src/components/chat-bubble/ChatBubble.scss
+++ b/src/components/chat-bubble/ChatBubble.scss
@@ -33,6 +33,8 @@
 			border-left: 0.2rem rgba($color: variables.$black, $alpha: 0.5) solid;
 			padding-left: 1rem;
 			margin-block: 1rem;
+			max-height: 5.8em;
+			overflow: hidden;
 		}
 
 		&-sender {
@@ -42,6 +44,13 @@
 
 		&-content {
 			opacity: 0.75;
+
+			p {
+				display: block !important;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+			}
 		}
 
 		&-link {
