--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -4,6 +4,7 @@ import { resolve } from "node:path";
 import { fileURLToPath } from "node:url";
 import { Metadata, metadataSchema } from "~/service/Metadata";
 import { Sidebar } from "./sidebar";
+import Seo from "./Seo.astro";
 
 import "~/styles/global.scss";
 import "@fontsource/space-grotesk/400.css";
@@ -50,9 +51,12 @@ const pathname = Astro.url.pathname;
 
 export type Props = {
 	title: string;
+	keywords: string[];
+	summary: string;
 };
 
-const { title } = Astro.props as Props;
+
+const { title, keywords, summary } = Astro.props as Props;
 ---
 
 <html lang="en">
@@ -61,6 +65,7 @@ const { title } = Astro.props as Props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<Seo keywords={keywords}  />
 		<title>{title} | TGIF</title>
 		<script>
 			import "../scripts/spa-navigation";
