--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from "~/components/Layout.astro";
 
 <Layout
 	keywords={["Telegram", "Group programing", "indonesia"]}
-	url={Astro.url.origin}
+	url={Astro.url + ''}
 	summary="Kutipan chat dari berbagai group telegram progaming indonesia"
 	title="Home"
 >
