--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -50,10 +50,10 @@ const talks: Metadata[] = await Promise.all(
 const pathname = Astro.url.pathname;
 
 export type Props = {
-	title: string;
-	keywords: string[];
-	summary: string;
-	url: string;
+	title?: string  | undefined;
+	keywords?: string[] | undefined;
+	summary?: string | undefined;
+	url?: URL | undefined;
 };
 
 const { title, keywords, summary, url } = Astro.props as Props;
@@ -73,25 +73,26 @@ const { title, keywords, summary, url } = Astro.props as Props;
 				<slot />
 			</div>
 		</div>
-		<style lang="scss">
-			@use "../styles/variables.scss";
-
-			.container {
-				position: relative;
-				max-width: 1400px;
-				height: 100%;
-				margin: 0 auto;
-				padding: 2rem;
-				display: grid;
-				gap: 2rem;
-				grid-template-columns: 42rem 1fr;
-			}
-
-			.chat-content {
-				position: relative;
-				height: 100%;
-				max-height: inherit;
-			}
-		</style>
 	</body>
 </html>
+
+<style lang="scss">
+	@use "../styles/variables.scss";
+
+	.container {
+		position: relative;
+		max-width: 1400px;
+		height: 100%;
+		margin: 0 auto;
+		padding: 2rem;
+		display: grid;
+		gap: 2rem;
+		grid-template-columns: 42rem 1fr;
+	}
+
+	.chat-content {
+		position: relative;
+		height: 100%;
+		max-height: inherit;
+	}
+</style>
