--- a/src/pages/chat/[slug].astro
+++ b/src/pages/chat/[slug].astro
@@ -15,11 +15,8 @@ export async function getStaticPaths() {
 	return getPaths();
 }
 ---
+
 <!-- just because Astro.url return value with type URL, I do this way to make the type converted to string -->
-<Layout
-	summary={found?.metadata.short_summary}
-	keywords={found?.metadata.tags}
-	title={found?.metadata.title}
->
+<Layout summary={found?.metadata.short_summary} keywords={found?.metadata.tags} title={found?.metadata.title}>
 	<ChatBox chat={found?.chat} client:load slug={slug} />
 </Layout>
