--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -7,12 +7,14 @@ export type Props = {
 };
 const props = Astro.props as Props;
 // We're just need the origin url e.g (https://www.tgif.teknologiumum.com/)
-const thumbnail: string = Astro.url.origin + "/thumbnail.png"
+const thumbnail: string = Astro.url.origin + "/thumbnail.png";
 // set default value when parent pass undefined
-const titleSEO = props?.title || "Home"
-const keywordsSEO = props?.keywords ? props?.keywords.join(", ") : ["Telegram", "Group programing", "indonesia"].join(", ")
-const summarySEO = props?.summary || "Kutipan chat dari berbagai group telegram progaming indonesia"
-const urlSEO = props?.url || Astro.url
+const titleSEO = props?.title || "Home";
+const keywordsSEO = props?.keywords
+	? props?.keywords.join(", ")
+	: ["Telegram", "Group programing", "indonesia"].join(", ");
+const summarySEO = props?.summary || "Kutipan chat dari berbagai group telegram progaming indonesia";
+const urlSEO = props?.url || Astro.url;
 ---
 
 <meta charset="utf-8" />
