pnpm run format again, but from another machine

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -73,24 +73,25 @@ const { title, keywords, summary, url } = Astro.props as Props;
 				<slot />
 			</div>
 		</div>
-	</body><style lang="scss">
-		@use "../styles/variables.scss";
+		<style lang="scss">
+			@use "../styles/variables.scss";
 
-		.container {
-			position: relative;
-			max-width: 1400px;
-			height: 100%;
-			margin: 0 auto;
-			padding: 2rem;
-			display: grid;
-			gap: 2rem;
-			grid-template-columns: 42rem 1fr;
-		}
+			.container {
+				position: relative;
+				max-width: 1400px;
+				height: 100%;
+				margin: 0 auto;
+				padding: 2rem;
+				display: grid;
+				gap: 2rem;
+				grid-template-columns: 42rem 1fr;
+			}
 
-		.chat-content {
-			position: relative;
-			height: 100%;
-			max-height: inherit;
-		}
-	</style>
+			.chat-content {
+				position: relative;
+				height: 100%;
+				max-height: inherit;
+			}
+		</style>
+	</body>
 </html>
