--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -3,18 +3,18 @@ export type Props = {
 	title: string | undefined;
 	keywords: string[] | undefined;
 	summary: string | undefined;
-	url: URL | undefined;
+	url: URL | string | undefined;
 };
 const props = Astro.props as Props;
-// We're just need the origin url e.g (https://www.tgif.teknologiumum.com/)
-const thumbnail: string = Astro.url.origin + "/thumbnail.png";
 // set default value when parent pass undefined
 const titleSEO = props?.title || "Home";
 const keywordsSEO = props?.keywords
-	? props?.keywords.join(", ")
-	: ["Telegram", "Group programing", "indonesia"].join(", ");
+? props?.keywords.join(", ")
+: ["Telegram", "Group programing", "indonesia"].join(", ");
 const summarySEO = props?.summary || "Kutipan chat dari berbagai group telegram progaming indonesia";
-const urlSEO = props?.url || Astro.url;
+const urlSEO = props?.url || Astro.site;
+// We're just need the origin url e.g (https://www.tgif.teknologiumum.com/)
+const thumbnail: string = Astro.site + "thumbnail.png";
 ---
 
 <meta charset="utf-8" />
