--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -14,7 +14,7 @@ const keywordsSEO = props?.keywords
 const summarySEO = props?.summary || "Kutipan chat dari berbagai group telegram progaming indonesia";
 const urlSEO = props?.url || Astro.site;
 // We're just need the origin url e.g (https://www.tgif.teknologiumum.com/)
-const thumbnail: string = Astro.site + "thumbnail.png";
+const thumbnail = Astro.site + "/thumbnail.png";
 ---
 
 <meta charset="utf-8" />
