feat: add scroll restoration

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -65,6 +65,10 @@ const { title, keywords, summary, url } = Astro.props as Props;
 		<script>
 			import "../scripts/spa-navigation";
 		</script>
+
+		<script>
+			import "../scripts/chat-box-scroll-restoration";
+		</script>
 	</head>
 	<body>
 		<div class="container">
